<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_phieumuon"
            android:icon="@drawable/book2"
            android:title="@string/menu_phieumuon" />
        <item
            android:id="@+id/nav_loaisach"
            android:icon="@drawable/book"
            android:title="@string/menu_loaisach" />
        <item
            android:id="@+id/nav_quanlysach"
            android:icon="@drawable/books"
            android:title="@string/menu_quanlyloaisach" />
        <item
            android:id="@+id/nav_quanlythanhvien"
            android:icon="@drawable/programmer"
            android:title="@string/menu_quanlythanhvien" />
    </group>
    <item android:title="Thống kê">
        <menu>
            <item
                android:id="@+id/nav_top10"
                android:icon="@drawable/top"
                android:title="@string/menu_top10" />
            <item
                android:id="@+id/nav_thongke"
                android:icon="@drawable/report"
                android:title="@string/menu_doanhthu" />
        </menu>
    </item>
    <item android:title="Người dùng">
        <menu>
            <item
                android:id="@+id/nav_doimatkhau"
                android:icon="@drawable/password"
                android:title="@string/menu_doimatkhau" />
            <item
                android:id="@+id/nav_dangxuat"
                android:icon="@drawable/logout2"
                android:title="@string/menu_dangxuat" />
        </menu>
    </item>
</menu>